# team-development-tutorials

./: .gitignore  README.md  pyproject.toml
notebooks/: cnn_tutorial.ipynb  main.ipynb
