[project]
name = "team-development-tutorials"
version = "0.1.0"
description = ""
authors = [
    {name = "Sota-Minokawa",email = "soumino9@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
